ingress/ingress-example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-depl
  labels:
    app: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        command: ["sh", "-c", "echo VERSION 1.0 from $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---
apiVersion: v1
kind: Service
metadata:
  name: app-v1
  labels:
    app: front
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app1.mydomain.com
    http:
      paths:
      - pathType: Prefix
        path: "/app1"
        backend:
          service:
            name: app-v1
            port:
              number: 8080
      - pathType: Prefix
        path: "/app2"
        backend:
          service:
            name: api-server-svc
            port:
              number: 9090
